# darkest-parser

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
darkest_parser/: __init__.py  darkest.py
tests/: test_cond.py  test_number.py  test_parse.py  test_tab.py  test_unparse.py
