[tool.poetry]
name = "darkest-parser"
version = "1.1.1"
description = "Parser for .darkest file"
authors = ["syrinka <syrinka@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lark = "^1.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
